--- a/css/advisor.css
+++ b/css/advisor.css
@@ -215,3 +215,31 @@ line-height: 40px;
     padding: 50px 0;
   }
 }
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu .dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -1px;
+}
+.col-md-4{
+    /* border: 2px solid black; */
+}
+.col-md-6{
+    /* border: 2px solid black; */
+    padding:10px;
+    margin-left:16%;
+}
+.row{
+  padding-top: 20%;
+}
+#show-advise{
+  display: none;
+  font-family: 'Athiti', sans-serif;
+  font-size: large;
+}
+.button{
+  font-size: 17px;
+  color:black;
+}
