added a galary on description and styled it

--- a/css/description.css
+++ b/css/description.css
@@ -286,7 +286,7 @@ nav{
     align-items: center;
     width: 50%;
     transform: translateX(100%);
-    transition: transform 0.5s ease-in;
+    transition: transform 0.2s ease-in;
   }
   /* .nav-links li{
     opacity: 0;
@@ -334,6 +334,119 @@ h2,h3{
 h2{
   font-size: 18px;
 }
+
+#portfolio{
+  background-color: white;
+}
+.fit-image{
+  height: 100%;
+  width: 100%;
+}
+.title{
+  font-size: 24px;
+  margin: 20px;
+}
+#my-grid{
+  margin-top: 50px;
+}
+.grid-padding{
+  padding: 0 8px;
+}
+.grid-padding img{
+  margin-bottom: 15px;
+  transition: 0.5s ease;
+}
+.grid-padding img:hover{
+  box-shadow: 0 10px 40px 0 rgba(0,0,0,0.9);
+ 
+  transition: 0.5s ease;
+}
+.col-sm-4 img{
+  padding-right: 10px;
+}
+.modal{
+  display:none;
+  position:fixed ; 
+  z-index: 1;
+  padding: 5px 0;
+  left:0 ;
+  top: 0;
+  width: 100%;
+  height:100%;
+  overflow:auto;
+  background-color: rgba(0,0,0,0.8);
+}
+.modal-content{
+  position: relative;
+  margin: auto;
+  padding: 0;
+  width: 85%;
+  max-width: 1200px;
+  border: none;
+  background-color: transparent !important;
+}
+.my-slides{
+  text-align: center;
+}
+
+.portrait-image{
+  height: 88vh;
+}
+.landscape-image{
+  width: 35vw;
+}
+
+.close{
+  color: yellow;
+  position: relative;
+  top: 10px;
+  left: 20px;
+  font-size: 48px;
+  font-weight: bold;
+  transition: 0.3s ease;
+}
+.close:hover, .close:focus{
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+.prev, .next{
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white !important;
+  font-weight: bold;
+  font-size: 3em;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+.next{
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.next:hover, .prev:hover{
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.numbertext{
+  color: grey;
+  font-size: 18px;
+  font-family: "Poppins";
+  padding: 8px 50px;
+  position: absolute;
+  top: 0;
+  left: 10px;
+}
+.decorate{
+  font-family: "Poppins";
+}
+
+
+
 .footer-top{
   background: #134611;
   padding: 80px 0;
