--- a/css/advisor.css
+++ b/css/advisor.css
@@ -77,10 +77,10 @@ nav{
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
-  .nav-links li{
+  /* .nav-links li{
     opacity: 0;
 
-  }
+  } */
   .burger{
     display: block;
   }
