--- a/css/advisor.css
+++ b/css/advisor.css
@@ -4,6 +4,7 @@
   padding:0px;
   box-sizing: border-box;
 }
+
 nav{
   display: flex;
   justify-content:space-around;
@@ -12,6 +13,7 @@ nav{
   font-family: "Poppins";
   background-color: #134611;
 }
+
 .logo{
   color: #96F072;
   text-transform: uppercase;
@@ -48,12 +50,17 @@ nav{
   background-color:#FEFCFB;
   margin: 5px;
   transition: all 0.3s ease;
+
 }
+
 @media screen and (max-width:1024px){
   .nav-links{
     width: 60%;
   }
+
 }
+
+
 @media screen and (max-width:768px){
   body{
     overflow-x: hidden;
@@ -71,16 +78,20 @@ nav{
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
-  .nav-links li{
+  /* .nav-links li{
     opacity: 0;
-  }
+
+  } */
   .burger{
     display: block;
   }
+ 
 }
 .nav-active{
   transform: translateX(0%);
 }
+
+
 @keyframes navlinkFade{
   from{
     opacity: 0;
@@ -91,8 +102,10 @@ nav{
     transform: translateX(0px);
   }
 }
+
 .toggle .line1{
   transform: rotate(-45deg) translate(-5px,6px);
+
 }
 .toggle .line2{
   opacity: 0;
