--- a/css/main.css
+++ b/css/main.css
@@ -212,9 +212,33 @@ line-height: 40px;
   text-align: center;
   background: #134611;
   line-height: 75px;
-  color: white;
+  color: grey;
+}
+.submit{
+  width: 40%;
+  background: none;
+  padding: 4px;
+  outline: none;
+  font-size: 13px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 33px;
+  text-align: center;
+  cursor: pointer;
+  margin-left: 3%;
+  border: 2px solid rgba(190,190,190);
+  color: rgba(190,190,190);
 }
 
+input{
+  padding: 10px;
+  /* margin: 10px; */
+  width: 70%;
+  background-color: rgba(136,133,133,0.5);
+  color: #fff;
+  border: none;
+  outline: none;
+}
 
 @media only screen and (min-width:768px) and (max-width: 991px){
   .md-mb-30{
@@ -236,13 +260,16 @@ line-height: 40px;
 } */
 .galleryContainer{
   width: 100%;
-  height: 500px;
-  max-width: 1000px;
+  height: 700px;
+  max-width: 1500px;
   margin: auto;
   user-select: none;
   box-shadow: 0px 0px 2px 1px #96e072;
   padding: 30px;
   box-sizing: border-box;
+  padding-right: 60px;
+  padding-left: 60px;
+  padding-bottom: 20px;
 }
 .galleryContainer .slideShowContainer{
   width: 100%;
@@ -325,7 +352,10 @@ line-height: 40px;
 .galleryContainer .arrow.arrowRight{
   transform: rotateZ(45deg);
 }
-
+.captionText{
+  color: #FEFCFB;
+  font-size: 20px;
+}
 
 .galleryContainer .slideShowContainer>.captionTextHolder{
   position: absolute;
@@ -459,7 +489,8 @@ line-height: 40px;
   color: white;
   padding-top: 8px;
   font-family: 'Poppins';
-  font-size: 18px;
+  font-size: 20px;
+  
 
 }
 /* gallery */
@@ -476,6 +507,11 @@ line-height: 40px;
                   /* "1fr 1fr 1fr 1fr 1fr" 33.33vh; */
   grid-gap: 10px;
   box-sizing: border-box;
+}
+.gallery2Container img:hover{
+  box-shadow: 0px 10px 20px 10px rgba(0, 0, 0, 0.9);
+ 
+  transition: 0.3s ease;
 }
 .gallery2Container .box {
   position: relative;
