--- a/css/main.css
+++ b/css/main.css
@@ -231,8 +231,8 @@ line-height: 40px;
 }
 
 input{
-  padding: 10px;
-  /* margin: 10px; */
+  padding: 5px;
+  margin-bottom: 8px;
   width: 70%;
   background-color: rgba(136,133,133,0.5);
   color: #fff;
