--- a/css/contact.css
+++ b/css/contact.css
@@ -275,9 +275,8 @@ line-height: 40px;
   letter-spacing: 2px;
 }
 input{
-  padding: 5px;
-  margin-bottom: 8px;
-  /* margin: 10px; */
+  padding: 10px;
+  margin: 10px;
   width: 70%;
   background-color: rgba(136,133,133,0.5);
   color: #fff;
